# sv-trace

./: .gitignore  CHANGELOG.md  CRITICAL_FIXES.md  DEVELOPMENT_DISCIPLINE.md  EDGE_CASE_RESULTS.md  FUTURE_PROJECTS.md  Idea.md  LICENSE  MANIFEST.in  Makefile  PLAN.md  README.md  SINGLE_PROJECT_PROPOSAL.md  SKILL.md  SPLIT_PROPOSAL.md  STRUCTURE.md  SV_FSM_Recognition.md  TEST_PLAN.md  TEST_PLAN_V2.md  TEST_REPORT.md  TEST_RESULTS.md  TEST_RESULTS_V2.md  TODO.md  TOOLS_TIERING.md  m.sv  pyproject.toml  pytest.ini  requirements.txt  t.sv  test_all.py  test_comprehensive.py  test_datapath_full.py  test_debug3.py  test_debug5.py  test_debug7.py  test_debug9.py  test_debug_alwaysff2.py  test_driver.py  test_forloop_attrs2.py  test_loop.py  (+6 more)
_archive/: base.py  clock.py  reset.py  test_driver_semantic_validation.py
_archive/semantic_old/: driver_cross.py  load.py
_archived/: models.py  semantic_ast_experiment.py
_archived/extractors/: base.py  driver.py  load.py
_archived/scope/: builder.py  models.py  symbol_table.py
_archived/semantic_ast/: __init__.py  builder.py  comparator.py  expr_parser.py  graph.py  nodes.py  resolver.py
archive/: USER_REQUIREMENTS.md
archive/2026-06-01_signal_tracer_only/: run_benchmarks.py
archive/deprecated/: bitselect.py  datapath.py  performance_estimator.py
benchmarks/: 01_basic_registers.sv  02_combinational.sv  03_bit_operations.sv  04_generate_for.sv  05_priority_encoder.sv  06_case_decoding.sv  07_fsm.sv  08_complex_fsm.sv  09_reset_strategies.sv  10_pipeline.sv  comprehensive_driver_load_test.sv
cli/: main.py
doc/: architecture.md
docs/: 02_trace_modules.md  API.md  APPLICATION_ANALYSIS_REPORT.md  ARCHITECTURE.md  DEVELOPMENT_DISCIPLINE.md  DRIVER_ANALYSIS.md  DRIVER_USAGE.md  EDGE_CASE_RESULTS_V2.md  EVALUATION_REPORT.md  MIGRATION_GUIDE.md  MODULE_SUMMARY.md  MULTI_PASS_ARCHITECTURE_PLAN.md  PARSER_SUPPORT.md  PARSER_VALUE.md  PARSE_AUDIT.md  PROJECT_OVERVIEW.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  README.md  REQUIREMENTS_ABSTRACTION.md  SCHEMAS.md  SRC_ANALYSIS.md  SVMANGER_LIMITS.md  SV_SYNTAX_SUPPORT.md  TEST_COVERAGE.md  TEST_REPORT_V2.md  TEST_SUMMARY.md  TODO.md  VERIFICATION_SCENARIOS.md  api_reference.md  bitselect.md  cdc_analyzer.md  connection.md  datapath.md  dependency.md  driver_collector.md  index.md  pipeline_analyzer.md  sv-trace-index.md  timing_report.md  (+1 more)
docs/adr/: 0001-use-pyslang-as-parser.md  ADR-002.md  ADR-003.md  ADR-004.md  ADR-005.md  ADR-007-dangling-ports-root-cause.md  ADR-009-io-spec-extraction.md  ADR-011-fsm-extraction.md  ADR-012-module-dependency.md  ADR-014-pyslang-limitations.md  ADR-015-dependency-analyzer-sources-fix.md  ADR-015-driver-load-trace-bug.md  ADR-016-debug-analyzers-api-mismatch.md  ADR-018-edge-case-test-results.md  ADR-019-parser-source-preservation.md  ADR-020.md  ADR-022-code-todos-fixed.md  ADR-023-p1-features-complete.md  ADR-028-regex-to-pyslang-refactor.md  ADR-029-trace-module-analysis.md  ADR-030-trace-refactor.md  README.md
docs/archive/: PRIORITY_ANALYSIS.md  TECHNICAL_SOLUTION_ASSESSMENT.md  TODO_V2.md
docs/core/: dataflow.md  load.md
docs/guides/: ARCHITECTURE.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  SV_PARSER_GUIDE.md
docs/opentitan_analysis/: uart_core_analysis.md
docs/pyslang-ast-ref/: README.md  ast_structure.md  node_attribute_mapping.md  syntaxkind_mapping.md
docs/pyslang-spec/: README.md  SKILL.md  SV_UNIQUE.md  ast_structure.md
memory/: 2026-05-03.md  2026-05-09-clock-edge.md
skills/: sv-trace-index.md
skills/bug-tracker-skill/: SKILL.md
skills/cdc-doc-skill/: SKILL.md
skills/code-quality-skill/: SKILL.md
skills/constraint-prob-skill/: SKILL.md
skills/constraint-skill/: SKILL.md
skills/datapath-skill/: SKILL.md
skills/debug-knowledge-base/: SKILL.md
skills/feature-prioritizer/: SKILL.md
skills/quality-skill/: SKILL.md
skills/signal-classifier-skill/: SKILL.md
skills/signal-skill/: SKILL.md
skills/spec-corner-case/: SKILL.md
skills/spec-to-verification/: SKILL.md
skills/tb-complexity-skill/: SKILL.md
skills/timing-equivalence/: SKILL.md
skills/verify-suite-skill/: SKILL.md
src/: __init__.py  sv_manager.py
src/apps/: controlflow.py  dataflow.py  evaluate.py
src/bugs/: bug_case.py  bug_tracker.py
src/changelog/: change_log.py
src/core/: __init__.py  models.py  models.py.bak
src/debug/: __init__.py  assistant.py  class_const_parser.py  class_extractor.py  class_extractor_simple.py  class_hierarchy.py  class_info.py  class_quality.py  class_relation.py  class_relation.py.bak  class_usage.py  complexity.py  constraint_parser.py  (+2 more)
templates/: cdc_checklist.md  cdc_protocol_template.md  io_constraint_template.md  rdl_template.md
tests/: BUG_FIX_PLAN.md  LEGACY_TESTS_REPORT.json  README.md  TEST_PLAN.md  TEST_PLAN_V2.md  TEST_RESULTS_V2.md  TEST_STRATEGY.md  debug_dcr.py  debug_driver.py  if_case_test.sv  mem_test.sv  run_all_tests.py  run_unit_tests.py  stimulus_test.sv  test_all.py  test_app_tools.py  test_chip_verification.py  test_comprehensive.py  test_control_dependency.py  test_controlflow.py  test_corners.py  test_driver.py  test_driver_boundary.py  test_driver_edge_cases.py  test_driver_grammar_coverage.py  test_flow_analysis.py  test_foundation.py  test_foundation_modules.py  test_hierarchy.py  test_semantic_fsm.py  test_semantic_signals.py  test_timing_cdc.py
(+905 files in other folders)
