[project]
name = "sv-trace"
version = "0.1.1"
description = "SystemVerilog static analysis library for RTL tracing, verification, and code quality"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "fundou1081", email = "fundou1081@users.noreply.github.com"}
]
maintainers = [
    {name = "fundou1081", email = "fundou1081@users.noreply.github.com"}
]
requires-python = ">=3.11"
keywords = [
    "systemverilog", "verilog", "uvm", "sva",
    "static-analysis", "verification", "rtl", "slang",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

dependencies = [
    "pyslang>=10.0",
]

[project.optional-dependencies]
z3 = ["z3-solver>=4.16"]
viz = ["graphviz>=0.20"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "black>=23.0", "ruff>=0.1.0"]
all = ["z3-solver>=4.16", "graphviz>=0.20", "pytest>=7.0", "black>=23.0", "ruff>=0.1.0"]

[project.urls]
Homepage = "https://github.com/fundou1081/sv-trace"
Repository = "https://github.com/fundou1081/sv-trace"
Issues = "https://github.com/fundou1081/sv-trace/issues"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "docs*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
