[project]
name = "sv-trace"
version = "1.0.0"
description = "SystemVerilog signal tracer: given a signal name, return all drivers and loads with full context (file, line, scope, clock, reset, conditions, port connection)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "fundou1081", email = "fundou1081@users.noreply.github.com"}
]
maintainers = [
    {name = "fundou1081", email = "fundou1081@users.noreply.github.com"}
]
requires-python = ">=3.11"
keywords = [
    "systemverilog", "rtl", "signal-tracing", "driver", "load",
    "static-analysis", "slang", "pyslang", "evidence-chain",
    "verification", "llm-tool",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

dependencies = [
    "pyslang>=10.0,<11",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=23.0", "ruff>=0.1.0"]

[project.urls]
Homepage = "https://github.com/fundou1081/sv-trace"
Repository = "https://github.com/fundou1081/sv-trace"
Issues = "https://github.com/fundou1081/sv-trace/issues"
Changelog = "https://github.com/fundou1081/sv-trace/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["signal_tracer*"]
exclude = ["tests*", "docs*", "_archive*", "_archived*", "archive*", "benchmarks*", "memory*", "doc*", "examples*"]

[tool.setuptools.package-data]
signal_tracer = ["py.typed"]

[tool.setuptools.exclude-package-data]
"*" = ["*.pyc", "*.pyo", "__pycache__", ".DS_Store"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
